--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+    margin: 0; padding: 0; font-family: Helvetica, sans-serif;
+}
 #card {
     background-color: #f4f4f4;
     padding: 30px;
